Add req num in detailed view

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -76,7 +76,7 @@
         <as-split direction="horizontal" [gutterSize]=7>
             <as-split-area>
                 <div class="label">
-                    <span>Request</span>
+                    <span>Request #{{clickedRow.position}}</span>
                     <span class="toolbar-spacer"></span>
                     <button [class.active]="wrapRequest" (click)="wrapRequest = !wrapRequest">Wrap</button>
                 </div>
