Add button to download response body

--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -103,6 +103,10 @@ as-split>as-split-area>div>button {
   color: darkblue;
 }
 
+.label button {
+  margin: 0 5px;
+}
+
 @media (prefers-color-scheme: dark) {
   .mat-table {
     background: 0;
