--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,5 +1,6 @@
 <as-split direction="vertical" [gutterSize]=7>
     <as-split-area [size]="60">
+        <input matInput type="search" (input)="applyFilter($event)" placeholder="Search" id="search" class="search">
         <table mat-table [dataSource]="dataSource" matSort cdkDropList cdkDropListOrientation="horizontal"
             (cdkDropListDropped)="drop($event)">
 
