refactor: Update image source path in info-dialog.component

--- a/src/app/components/header/info-dialog.component.html
+++ b/src/app/components/header/info-dialog.component.html
@@ -69,7 +69,7 @@
         do I view items export from Burp's proxy's history?</a></li>
   </ul>
 
-  <img width="100%" src="https://raw.githubusercontent.com/adityatelange/bhhb/main/src/assets/bhhb.png" alt="">
+  <img width="100%" src="assets/bhhb.png" alt="">
 
 </mat-dialog-content>
 <mat-dialog-actions align="end">
